--- a/dashboard.html
+++ b/dashboard.html
@@ -31,7 +31,7 @@
         <div class="main-content">
 
             <div>
-                <h1 id="welcome-msg">Welcome, Alex!</h1>
+                <h1 id="welcome-msg">Loading...</h1>
                 <p style="color: grey;">Here is an overview of your current stats and recent activity.</p>
             </div>
 
